2001-04-03  John Harper  <jsh@eazel.com>

	reviewed by: Darin Adler <darin@eazel.com>

	Fixed bug 7967 (Tree view uses non-standard colors instead of
	gtk theme colors):

	* libnautilus-extensions/nautilus-list.c,
	libnautilus-extensions/nautilus-list.h
	(nautilus_list_set_alternate_row_colors,
	nautilus_list_set_background_color_offsets): new functions.
	They give some control over how the list background is drawn.
	The offsets function takes two offsets into the GtkStyle
	structure (which should point to GdkColor structures)

	* libnautilus-extensions/nautilus-ctree.c
	(nautilus_ctree_init): call the above two functions with
	suitable values to make the tree look like it used to, before
	being derived from the NautilusList widget

2001-04-03  Darin Adler  <darin@eazel.com>

	reviewed by: John Sullivan <sullivan@eazel.com>

	* libnautilus/nautilus-bonobo-workarounds.c:
	(nautilus_bonobo_object_force_destroy): Add new version that is
	not vulnerable to the problem of an unref coming in from the other
	process during the destroy phase. This version relies on Bonobo
	internals, so it's a truly evil bit of code, and I should be
	severely punished for even thinking of writing it.
	(nautilus_bonobo_object_force_destroy_at_idle): Added some more
	checks that I thought would help me in debugging.
	
	* src/nautilus-shell-ui.xml: Improve wording of tooltip for the Up
	command.

	* components/notes/nautilus-notes.c: Some code cleanup.

	* src/file-manager/fm-directory-view.c: Fixed a typo.
	
2001-04-03  John Sullivan  <sullivan@eazel.com>

	reviewed by: Darin Adler  <darin@eazel.com>

	* src/nautilus-window.c: (add_to_history_list):
	Imposed a 50-item limit on the length of the
	history list. Perhaps someday we'll save it to
	disk and organize old items by date, but this
	fixes the immediate problem of the list getting
	unboundedly long.

2001-04-03  John Sullivan  <sullivan@eazel.com>

	* libnautilus-extensions/nautilus-ellipsizing-label.c: